FUT Defects Fix + Discrepancy Create Part and other logic

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -112,6 +112,7 @@
 
 .sapMTB-Transparent-CTX>.sapMTitleTB.sapMTitleStyleAuto {
     color: white;
+    background-color: #050298;
     /*font-size: 1.125rem;*/
 }
 .formcolor1{
