--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -78,7 +78,7 @@
                                         <l:GridData span="XL2 L3 M6 S4" />
                                     </layoutData> -->
                                 </ComboBox>
-                                <Input id="idsubcno" valueHelpRequest="_onVHReqSubCategory" visible="true" showValueHelp="true" change="onChangeWI">
+                                <Input id="idsubcno" valueHelpRequest="_onVHReqSubCategory" visible="true" showValueHelp="true" change="onChangeSubCategory">
                                     <!-- <layoutData>
                                         <l:GridData span="XL2 L3 M6 S4" />
                                     </layoutData> -->
